--- a/src/main/resources/templates/EditTransactionPage.html
+++ b/src/main/resources/templates/EditTransactionPage.html
@@ -15,6 +15,7 @@
       <img src="/images/expensifylogo.png" alt="EXPEN$IFY" class="logo-img">
     </div>
     <ul>
+      <li><a th:href="@{/dashboard}">Dashboard</a></li>
       <li><a th:href="@{/transactions}">Transactions</a></li>
       <li><a th:href="@{/bills}">Bills</a></li>
       <li><a th:href="@{/budgets}">Budgets</a></li>
